# plutus_minting_test

./: README.md  cabal.project  mint_test.cabal
app/: EmulatorTracingTesting.hs
src/: MintingNft.hs  SimpleOffChain.hs
